plugins {
    id 'java'
    id 'java-library'
    id 'com.google.osdetector' version '1.7.+'
    id "me.modmuss50.mod-publish-plugin" version "1.1.+"
}

def MT_TOKEN = System.getenv("MODRINTH_TOKEN")
def CF_TOKEN = System.getenv("CURSEFORGE_TOKEN")

base {
    archivesName = id
    libsDirectory = new File("builtJars/")
}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

java {
    withSourcesJar()
    sourceCompatibility = targetCompatibility = JavaVersion.VERSION_17
}

sourcesJar {
    exclude("videolan/**.zip")
    exclude("videolan/**.7z")
}

println("Gradle Java: ${JavaVersion.current()}")
println("Building project: ${properties.simplename}")
println("Java: ${System.getProperty 'java.version'}, JVM: ${System.getProperty 'java.vm.version'} (${System.getProperty 'java.vendor'}), Arch: ${System.getProperty 'os.arch'}, Encoding: ${System.getProperty "file.encoding"}")

repositories {
    google()
    mavenCentral()
    maven { url 'https://jitpack.io' }
    maven { url "https://repo.spongepowered.org/maven" }
}

configurations {
    include
    include.extendsFrom(implementation)
    library
}

sourceSets {
    // SHADOW
    main.compileClasspath += configurations.include
    main.runtimeClasspath += configurations.include
    test.compileClasspath += configurations.include
    test.runtimeClasspath += configurations.include

    // LIBRARY
    main.compileClasspath += configurations.library
    main.runtimeClasspath += configurations.library
    test.compileClasspath += configurations.library
    test.runtimeClasspath += configurations.library
}

dependencies {
    // EXT DEP
    library "org.watermedia:binaries"

    // DEPENDENCIES
    include "org.watermedia:tools"
    include "org.bytedeco:ffmpeg:7.1.1-1.5.12"
    include ("com.github.SrRapero720:waterconfig:$waterconfig_version") { // TODO: do not shade
        transitive = false
    }

    // DEPENDENCIES INCLUDED IN MINECRAFT
    library "com.github.WaterMediaTeam:modloaders:$loaders_version"
    library "com.google.code.gson:gson:$gson_version"

    library "org.apache.logging.log4j:log4j-api:$log4j_version"
    library "org.apache.logging.log4j:log4j-core:$log4j_version"

    library "org.lwjgl:lwjgl-opengl:$opengl_version"
    library "org.lwjgl:lwjgl-glfw:$opengl_version"
    library "org.lwjgl:lwjgl-stb:$opengl_version"
    library "org.lwjgl:lwjgl-openal:$openal_version"
    library "org.joml:joml:$joml_version"

    // TEST DEPENDENCIES
    testImplementation(platform('org.junit:junit-bom:6.0.2'))
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    testRuntimeOnly "org.lwjgl:lwjgl:$opengl_version:natives-$osdetector.os"
    testRuntimeOnly "org.lwjgl:lwjgl-opengl:$opengl_version:natives-$osdetector.os"
    testRuntimeOnly "org.lwjgl:lwjgl-glfw:$opengl_version:natives-$osdetector.os"
    testRuntimeOnly "org.lwjgl:lwjgl-openal:$openal_version:natives-$osdetector.os"
}

// Process target resources with mod info
processResources {
    outputs.upToDateWhen { false }
    filesMatching(['META-INF/mods.toml', 'META-INF/neoforge.mods.toml', 'pack.mcmeta', 'fabric.mod.json', "watermedia/version.cfg"]) {
        expand(project.properties)
    }
}

jar {
    duplicatesStrategy = DuplicatesStrategy.WARN

    manifest {
        attributes "id"                         : id
        attributes "version"                    : version
        attributes "Specification-Title"        : id
        attributes "Specification-Vendor"       : authors
        attributes "Specification-Version"      : version
        attributes "Implementation-Title"       : id
        attributes "Implementation-Version"     : version
        attributes "Implementation-Vendor"      : authors
        attributes "Implementation-Timestamp"   : new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        attributes "Main-Class": "org.watermedia.bootstrap.AppBootstrap"
    }
    from {
        configurations.include.collect {
            it.isDirectory() ? it.matching {
            } : zipTree(it).matching {
            }
        }
    }
    exclude('META-INF/versions/', 'META-INF/maven/')

    filesMatching('META-INF/*') {
        duplicatesStrategy = DuplicatesStrategy.INCLUDE // COMBINE FILES
    }
}

publishMods {
    file = jar.archiveFile
    changelog = getChangelogText()
    type = "alpha".equalsIgnoreCase(project.properties.versiontype?.toString())
            ? ALPHA : "beta".equalsIgnoreCase(project.properties.versiontype?.toString())
            ? BETA : "release".equalsIgnoreCase(project.properties.versiontype?.toString())
            ? STABLE : ALPHA
    displayName = "WM/${project.properties.version}"
    modLoaders.add("forge")
    modLoaders.add("neoforge")
    modLoaders.add("fabric")

    additionalFiles.from(sourcesJar.archiveFile)
    maxRetries = 2

    dryRun = false

    curseforge {
        accessToken = CF_TOKEN
        projectId = curseforgeid
        minecraftVersions.addAll("1.18.2", "1.19.2", "1.20.1", "1.21.1", "1.21.11")
        javaVersions.addAll(JavaVersion.VERSION_25, JavaVersion.VERSION_21, JavaVersion.VERSION_17)
        clientRequired = true
        serverRequired = true
        projectSlug = id
        additionalFile(sourcesJar) {
            name = "WM-sources/${project.properties.version}"
        }
        requires("watermedia-binaries")
    }

    modrinth {
        accessToken = MT_TOKEN
        projectId = modrinthid
        minecraftVersions.addAll("1.18.2", "1.19.2", "1.20.1", "1.21.1", "1.21.11")
        requires("watermedia-binaries")
    }
}

def getChangelogText() {
    def result = ""
    for (String line: file('CHANGELOG.md').readLines('UTF-8')) {
        if (line.isEmpty()) return result
        result += line + '\n'
    }
    return result
}